--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 # Gmail SMTP settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=bikash.pattnaik14@gmail.com
-spring.mail.password=prasannasipu
+spring.mail.username=mail@gmail.com
+spring.mail.password=passsword
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
