--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 # Gmail SMTP settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mail@gmail.com
-spring.mail.password=passsword
+spring.mail.username=add your email in which you want to sent mail
+spring.mail.password=use your mail pass key
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
